--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
             <input type="datetime-local" id="endTime" name="endTime" required><br>
 
             <!-- File Upload from Upload Form -->
-            <label for="myFile" class="fileButton">Choose File</label>
+            <label for="myFile" class="fileButton"> Upload photo/image </label>
             <input type="file" id="myFile" name="myFile"><br>
 
             <!-- Submit Button -->
