--- a/Reviews.html
+++ b/Reviews.html
@@ -16,33 +16,32 @@
             </div>
         </div>
     </nav>
-
-    <div class="container">
-        <h1>Event Reviews</h1>
-
         <!-- Submit Review Form -->
-        <section>
-            <h2>Submit a Review</h2>
-            <form id="review-form">
+ 
+        <form id="review-form">
+            <div name="review-formContainer"> 
+                <h1>Submit a Review</h1>
                 <select id="event-select" required>
                     <option value="">Select Event</option>
                     <!-- Options populated by JavaScript or server-side code -->
-                </select><br>
-                <textarea id="review-text" placeholder="Your review..." required></textarea><br>
-                <input type="number" id="review-rating" min="1" max="5" placeholder="Rating (1-5)" required><br>
-                <input type="file" id="review-photos" multiple><br>
+                </select>
+                <br/>
+                <textarea id="review-text" placeholder="Your review..." required></textarea>
+                <br/>
+                <input type="number" id="review-rating" min="1" max="5" placeholder="Rating (1-5)" required>
+                <br/>
+                <label for="myFile" class="fileButton">Image</label>
+                <input type="file" id="myFile" class="myFile" multiple>
+                <br/>
                 <button type="submit">Submit Review</button>
-            </form>
-        </section>
+            </div>
+        </form>
 
         <!-- Display Reviews -->
-        <section>
             <h2>Reviews</h2>
             <ul id="review-list">
                 <!-- Reviews will be dynamically populated -->
             </ul>
-        </section>
-    </div>
 
     <script src="app.js"></script>
 </body>
