--- a/Reviews.html
+++ b/Reviews.html
@@ -9,10 +9,25 @@
 <body>
     <nav class="navBarContainer">
         <div class="navBarItems" id="navBarItems">
+            <div class="loginButtonContainer">
+                <a href="login.html"> 
+                     <button class="login">Login</button>
+                </a>
+            </div>   
+            <div class="signUpContainer">
+                <a href="signUp.html">
+                    <button class="signUp">Sign Up</button>
+                </a>
+            </div>                
             <div class="inTownLogoContainer">
                 <a href="Home.html"> 
                     <button class="InTownLogo">InTown</button>
-                </a>
+                 </a>
+            </div>
+            <div class="reviewContainer">
+                <a href="Reviews.html"> 
+                    <button class="review">Reviews</button>
+                 </a>
             </div>
         </div>
     </nav>
@@ -45,4 +60,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
