--- a/signUp.html
+++ b/signUp.html
@@ -6,20 +6,33 @@
 </head>
 
 <body>
+
+    <!----
     <nav class="navBarContainer">
-        <div class="navBarItems" id="navBarItems"> 
+        <div class="navBarItems" id="navBarItems">
             <div class="loginButtonContainer">
-            <a href="login.html">
-            <button class="login">Login</button>
-            </a>
-            </div>
+                <a href="login.html"> 
+                    <button class="login">Login</button>
+                 </a>
+            </div>   
+            <div class="signUpContainer">
+                <a href="signUp.html">
+                    <button class="signUp">Sign Up</button>
+                </a>
+            </div>                
             <div class="inTownLogoContainer">
-             <a href="Home.html"> 
-                <button class="InTownLogo">InTown</button>
-             </a>
+                <a href="Home.html"> 
+                    <button class="InTownLogo">InTown</button>
+                 </a>
+            </div>
+            <div class="reviewContainer">
+                <a href="Reviews.html"> 
+                    <button class="review">Reviews</button>
+                 </a>
             </div>
         </div>
     </nav>
+-->
     
     <form name="userSignUp" action="/app.js" onsubmit="return validateForm()" method="post" required>
         <div class="userSignUpContainer">
@@ -31,6 +44,9 @@
             <input type="password" id="pwd" name="pwd" placeholder="Enter your Password" required>
             <br/>
             <button type="submit">Sign up</button>
+            <br/>
+            <br/>
+            <a href="login.html">Already have an account? Click here to login</a>
         </div>
      </form> 
 </body>
