adding Event page

--- a/Home.html
+++ b/Home.html
@@ -27,6 +27,11 @@
                         <button class="review">Reviews</button>
                      </a>
                 </div>
+                <div class="eventContainer">
+                    <a href="Event.html"> 
+                        <button class="event">Events</button>
+                     </a>
+                </div>
             </div>
         </nav>
             
