--- a/Reviews.html
+++ b/Reviews.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InTown - Reviews</title>
+    <title>Reviews</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,8 +8,8 @@
         <div class="navBarItems" id="navBarItems">
             <div class="loginButtonContainer">
                 <a href="login.html"> 
-                     <button class="login">Login</button>
-                </a>
+                    <button class="login">Login</button>
+                 </a>
             </div>   
             <div class="signUpContainer">
                 <a href="signUp.html">
@@ -27,6 +24,11 @@
             <div class="reviewContainer">
                 <a href="Reviews.html"> 
                     <button class="review">Reviews</button>
+                 </a>
+            </div>
+            <div class="eventContainer">
+                <a href="Event.html"> 
+                    <button class="event">Events</button>
                  </a>
             </div>
         </div>
@@ -52,11 +54,12 @@
             </div>
         </form>
 
-        <!-- Display Reviews -->
+        <!-- Display Reviews --
             <h2>Reviews</h2>
             <ul id="review-list">
-                <!-- Reviews will be dynamically populated -->
+                 Reviews will be dynamically populated --
             </ul>
+        --->
 
     <script src="app.js"></script>
 </body>
