Nav Redesign & Recentering Forms

--- a/Event.html
+++ b/Event.html
@@ -7,35 +7,18 @@
     
     <body>
         <nav class="navBarContainer">
-            <div class="navBarItems" id="navBarItems">
-                <div class="loginButtonContainer">
-                    <a href="login.html"> 
-                        <button class="login">Login</button>
-                     </a>
-                </div>   
-                <div class="signUpContainer">
-                    <a href="signUp.html">
-                        <button class="signUp">Sign Up</button>
-                    </a>
-                </div>                
-                <div class="inTownLogoContainer">
-                    <a href="Home.html"> 
-                        <button class="InTownLogo">InTown</button>
-                     </a>
-                </div>
-                <div class="reviewContainer">
-                    <a href="Reviews.html"> 
-                        <button class="review">Reviews</button>
-                     </a>
-                </div>
-                <div class="eventContainer">
-                    <a href="Event.html"> 
-                        <button class="event">Events</button>
-                     </a>
-                </div>
+            <div class="navTitle">
+                <a href="Home.html">InTown</a>
             </div>
+            <ul class="navList">
+                <li class="navItem"><a href="Event.html">Event</a></li>
+                <li class="navItem"><a href="Reviews.html">Reviews</a></li>
+                <li class="navItem"><a href="signUp.html">Sign up</a></li>
+                <li class="navItem"><a href="login.html">Login</a></li>
+            </ul>  
         </nav>
         <h1>EVENTS</h1>
+        <br/>
         <div name="eventDashboard" id="eventDashboard" class="eventDashboard">
             <img src="images/testPhoto.jpg" alt="">
             <img src="images/horse.webp" alt="">
@@ -45,6 +28,7 @@
             <img src="images/cityscape.webp" alt="">
             <img src="images/rollercoaster.webp" alt="">
             <img src="images/tennisracket.webp" alt="">
+            <img src="images/pumpkin.jpg" alt="">
         </div>
     </body>
 </html>
