--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
     -->
-
+<div name="formContainer" class="formContainer">
     <form name="userLogin" action="/app.js" onsubmit="return validateForm()" method="post" required>
         <div class="userSignUpContainer">
             <h1>Login</h1>
@@ -49,8 +49,8 @@
             <br/>
             <a href="signUp.html">New to InTown? Click here to sign up</a>
         </div>
-        
     </form> 
+</div>
 </body>
 
 </html>
