--- a/signUp.html
+++ b/signUp.html
@@ -7,33 +7,7 @@
 
 <body>
 
-    <!----
-    <nav class="navBarContainer">
-        <div class="navBarItems" id="navBarItems">
-            <div class="loginButtonContainer">
-                <a href="login.html"> 
-                    <button class="login">Login</button>
-                 </a>
-            </div>   
-            <div class="signUpContainer">
-                <a href="signUp.html">
-                    <button class="signUp">Sign Up</button>
-                </a>
-            </div>                
-            <div class="inTownLogoContainer">
-                <a href="Home.html"> 
-                    <button class="InTownLogo">InTown</button>
-                 </a>
-            </div>
-            <div class="reviewContainer">
-                <a href="Reviews.html"> 
-                    <button class="review">Reviews</button>
-                 </a>
-            </div>
-        </div>
-    </nav>
--->
-    
+<div name="formContainer" class="formContainer">
     <form name="userSignUp" action="/app.js" onsubmit="return validateForm()" method="post" required>
         <div class="userSignUpContainer">
             <h1>Create an Account</h1>
@@ -48,7 +22,9 @@
             <br/>
             <a href="login.html">Already have an account? Click here to login</a>
         </div>
-     </form> 
+     </form>
+</div> 
+
 </body>
 
 </html>
