--- a/Reviews.html
+++ b/Reviews.html
@@ -5,36 +5,19 @@
 </head>
 <body>
     <nav class="navBarContainer">
-        <div class="navBarItems" id="navBarItems">
-            <div class="loginButtonContainer">
-                <a href="login.html"> 
-                    <button class="login">Login</button>
-                 </a>
-            </div>   
-            <div class="signUpContainer">
-                <a href="signUp.html">
-                    <button class="signUp">Sign Up</button>
-                </a>
-            </div>                
-            <div class="inTownLogoContainer">
-                <a href="Home.html"> 
-                    <button class="InTownLogo">InTown</button>
-                 </a>
-            </div>
-            <div class="reviewContainer">
-                <a href="Reviews.html"> 
-                    <button class="review">Reviews</button>
-                 </a>
-            </div>
-            <div class="eventContainer">
-                <a href="Event.html"> 
-                    <button class="event">Events</button>
-                 </a>
-            </div>
+        <div class="navTitle">
+            <a href="Home.html">InTown</a>
         </div>
+        <ul class="navList">
+            <li class="navItem"><a href="Event.html">Event</a></li>
+            <li class="navItem"><a href="Reviews.html">Reviews</a></li>
+            <li class="navItem"><a href="signUp.html">Sign up</a></li>
+            <li class="navItem"><a href="login.html">Login</a></li>
+        </ul>  
     </nav>
         <!-- Submit Review Form -->
- 
+    
+    <div name="formContainer" class="formContainer">
         <form id="review-form">
             <div name="review-formContainer"> 
                 <h1>Submit a Review</h1>
@@ -53,6 +36,7 @@
                 <button type="submit">Submit Review</button>
             </div>
         </form>
+    </div>
 
         <!-- Display Reviews --
             <h2>Reviews</h2>
