--- a/BusinessPageProfile.html
+++ b/BusinessPageProfile.html
@@ -16,7 +16,7 @@
         <section class="business-info">
             <h1>Business Profile</h1>
             <img src="business-logo.jpg" alt="Business Logo" class="profile-photo">
-            <h2>City Events LLC</h2>
+            <h2>Business Name</h2>
             <p>Location: New York, NY</p>
             <p>Established: 2015</p>
             <p>Description: "City Events LLC organizes unique events across NYC to connect people and celebrate culture, music, and food."</p>
@@ -44,19 +44,20 @@
         <!-- User Reviews for Business -->
         <section class="business-reviews">
             <h2>Reviews</h2>
-            <ul>
-                <li>
-                    <h3>Event: Jazz Night</h3>
-                    <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9733; (5/5)</p>
+            <div class="review-grid">
+                <div class="review-card">
+                    <h3>Jazz Night</h3>
+                    <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9733;</p>
                     <p>"Fantastic atmosphere and music. Highly recommend!"</p>
-                </li>
-                <li>
-                    <h3>Event: Outdoor Movie Night</h3>
-                    <p>Rating: &#9733;&#9733;&#9733;&#9734;&#9734; (3/5)</p>
+                </div>
+                <div class="review-card">
+                    <h3>Outdoor Movie Night</h3>
+                    <p>Rating: &#9733;&#9733;&#9733;&#9734;&#9734;</p>
                     <p>"Good experience but could improve the seating arrangement."</p>
-                </li>
-            </ul>
-        </section>
+                </div>
+                <!-- Add more review cards as needed -->
+            </div>
+        </section>        
     </div>
 </body>
 </html>
