--- a/public/Reviews.html
+++ b/public/Reviews.html
@@ -41,12 +41,7 @@
         </form>
     </div>
 
-        <!-- Display Reviews --
-            <h2>Reviews</h2>
-            <ul id="review-list">
-                 Reviews will be dynamically populated --
-            </ul>
-        --->
+    </div>
 
     <script src="app.js"></script>
 </body>
