--- a/public/Reviews.html
+++ b/public/Reviews.html
@@ -31,7 +31,18 @@
                 <br/>
                 <textarea id="review-text" placeholder="Your review..." required></textarea>
                 <br/>
-                <input type="number" id="review-rating" min="1" max="5" placeholder="Rating (1-5)" required>
+                <div class="star-rating">
+                    <input type="radio" name="rating" id="star5" value="5" required>
+                    <label for="star5" title="5 stars">★</label>
+                    <input type="radio" name="rating" id="star4" value="4">
+                    <label for="star4" title="4 stars">★</label>
+                    <input type="radio" name="rating" id="star3" value="3">
+                    <label for="star3" title="3 stars">★</label>
+                    <input type="radio" name="rating" id="star2" value="2">
+                    <label for="star2" title="2 stars">★</label>
+                    <input type="radio" name="rating" id="star1" value="1">
+                    <label for="star1" title="1 star">★</label>
+                </div>                
                 <br/>
                 <label for="myFile" class="fileButton">Image</label>
                 <input type="file" id="myFile" class="myFile" multiple>
