photo updates to Bento

--- a/public/BentoDesign.html
+++ b/public/BentoDesign.html
@@ -23,32 +23,32 @@
     <div class="bento_wrapper">
         <div class="bentoContainer">
             <div class="col-left">
-                <div class="row row1"></div>
-                <div class="row row2"></div>
+                <div class="row row1"><img src="images/aquarium.jpeg"></div>
+                <div class="row row2"><img src="images/big_shoals.jpeg"></div>
                 <div class="row row3">
-                    <div class="row-col left"></div>
-                    <div class="row-col right"><img src="images/pumpkin.jpg" alt=""></div>
+                    <div class="row-col left"><img src="images/candy_cane.jpeg" alt=""></div>
+                    <div class="row-col right"><img src="images/john_berry.jpeg" alt=""></div>
                 </div>
             </div>
             <div class="col-right">
-                <div class="row top"> <img src="images/tennisracket.webp" alt=""></div>
-                <div class="row bottom"><img src="images/rollercoaster.webp" alt=""></div>
+                <div class="row top"> <img src="images/karaoke.jpeg" alt=""></div>
+                <div class="row bottom"><img src="images/open_mic.jpeg" alt=""></div>
             </div>
         </div>
     </div>
     <div class="bento_wrapper">
         <div class="bentoContainer">
             <div class="col-left">
-                <div class="row row1"><img src="images/testPhoto.jpg" alt=""></div>
-                <div class="row row2"><img src="images/horse.webp" alt=""></div>
+                <div class="row row1"><img src="images/oreo.jpeg" alt=""></div>
+                <div class="row row2"><img src="images/shocktoberfest.jpeg" alt=""></div>
                 <div class="row row3">
-                    <div class="row-col left"><img src="images/library.webp" alt=""></div>
-                    <div class="row-col right"><img src="images/bike.webp" alt=""></div>
+                    <div class="row-col left"><img src="images/soup_kitchen.jpeg" alt=""></div>
+                    <div class="row-col right"><img src="images/trivia.jpeg" alt=""></div>
                 </div>
             </div>
             <div class="col-right">
-                <div class="row top"><img src="images/menu.webp" alt=""></div>
-                <div class="row bottom"><img src="images/cityscape.webp" alt=""></div>
+                <div class="row top"><img src="images/shocktoberfest.jpeg" alt=""></div>
+                <div class="row bottom"><img src="images/soup_kitchen.jpeg" alt=""></div>
             </div>
         </div>
     </div>
