--- a/public/Event.html
+++ b/public/Event.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html lang ="en">
     <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Events</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    
     <body>
         <nav class="navBarContainer">
             <div class="navTitle">
@@ -20,18 +20,37 @@
                 <li class="navItem"><a href="login.html">Login</a></li>
             </ul>  
         </nav>
-        <h1>EVENTS</h1>
-        <br/>
-        <div name="eventDashboard" id="eventDashboard" class="eventDashboard">
-            <img src="images/testPhoto.jpg" alt="">
-            <img src="images/horse.webp" alt="">
-            <img src="images/library.webp" alt="">
-            <img src="images/bike.webp" alt="">
-            <img src="images/menu.webp" alt="">
-            <img src="images/cityscape.webp" alt="">
-            <img src="images/rollercoaster.webp" alt="">
-            <img src="images/tennisracket.webp" alt="">
-            <img src="images/pumpkin.jpg" alt="">
+    <div class="bento_wrapper">
+        <div class="bentoContainer">
+            <div class="col-left">
+                <div class="row row1"><img src="images/aquarium.jpeg"></div>
+                <div class="row row2"><img src="images/big_shoals.jpeg"></div>
+                <div class="row row3">
+                    <div class="row-col left"><img src="images/candy_cane.jpeg" alt=""></div>
+                    <div class="row-col right"><img src="images/john_berry.jpeg" alt=""></div>
+                </div>
+            </div>
+            <div class="col-right">
+                <div class="row top"> <img src="images/karaoke.jpeg" alt=""></div>
+                <div class="row bottom"><img src="images/open_mic.jpeg" alt=""></div>
+            </div>
         </div>
+    </div>
+    <div class="bento_wrapper">
+        <div class="bentoContainer">
+            <div class="col-left">
+                <div class="row row1"><img src="images/oreo.jpeg" alt=""></div>
+                <div class="row row2"><img src="images/shocktoberfest.jpeg" alt=""></div>
+                <div class="row row3">
+                    <div class="row-col left"><img src="images/soup_kitchen.jpeg" alt=""></div>
+                    <div class="row-col right"><img src="images/trivia.jpeg" alt=""></div>
+                </div>
+            </div>
+            <div class="col-right">
+                <div class="row top"><img src="images/shocktoberfest.jpeg" alt=""></div>
+                <div class="row bottom"><img src="images/soup_kitchen.jpeg" alt=""></div>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
