--- a/public/signUp.html
+++ b/public/signUp.html
@@ -9,26 +9,26 @@
     <nav class="navBarContainer">
         <div class="navBarItems" id="navBarItems"> 
             <div class="loginButtonContainer">
-            <a href="login.html">
+            <a href="/login">
             <button class="login">Login</button>
             </a>
             </div>
             <div class="inTownLogoContainer">
-             <a href="Home.html"> 
+             <a href="/Home"> 
                 <button class="InTownLogo">InTown</button>
              </a>
             </div>
         </div>
     </nav>
     
-    <form name="userSignUp" action="/app.js" onsubmit="return validateForm()" method="post" required>
+    <form name="userSignUp" action="http://localhost:3000/user" method="post" enctype="application/x-www-form-urlencoded" required>
         <div class="userSignUpContainer">
             <h1>Create an Account</h1>
-            <input type="text" id="name" name="name" placeholder="Name (Company Name)" required>
+            <input type="text" id="name" name="user_name" placeholder="Name (Company Name)" required>
             <br/>
-            <input type="email" id="email" name="email" placeholder= "Email" required>
+            <input type="email" id="email" name="email_add" placeholder= "Email" required>
             <br/>
-            <input type="password" id="pwd" name="pwd" placeholder="Enter your Password" required>
+            <input type="password" id="pwd" name="password" placeholder="Enter your Password" required>
             <br/>
             <button type="submit">Sign up</button>
         </div>
