current style changes -- still need updates

--- a/public/BentoDesign.html
+++ b/public/BentoDesign.html
@@ -23,8 +23,28 @@
     <div class="bento_wrapper">
         <div class="bentoContainer">
             <div class="col-left">
-                <div class="row row1"><img src="images/aquarium.jpeg"></div>
-                <div class="row row2"><img src="images/big_shoals.jpeg"></div>
+                <div class="row row1">
+                    <div class="card">
+                           <div class="card-face front">
+                            <img src="images/aquarium.jpeg">
+                           </div>
+                           <div class="card-face back">
+                            <h4>This is the event name.</h4>
+                            <p>This is the event description</p>
+                           </div> 
+                    </div>
+                </div>
+                <div class="row row2">
+                    <div class="card">
+                        <div class="card-face front">
+                            <img src="images/big_shoals.jpeg">
+                        </div>
+                        <div class="card-face back">
+                            <h4>This is the event name.</h4>
+                            <p>This is the event description</p>
+                        </div> 
+                 </div>
+                </div>
                 <div class="row row3">
                     <div class="row-col left"><img src="images/candy_cane.jpeg" alt=""></div>
                     <div class="row-col right"><img src="images/john_berry.jpeg" alt=""></div>
@@ -39,7 +59,8 @@
     <div class="bento_wrapper">
         <div class="bentoContainer">
             <div class="col-left">
-                <div class="row row1"><img src="images/oreo.jpeg" alt=""></div>
+                <div class="row row1"><img src="images/oreo.jpeg" alt="">
+                </div>
                 <div class="row row2"><img src="images/shocktoberfest.jpeg" alt=""></div>
                 <div class="row row3">
                     <div class="row-col left"><img src="images/soup_kitchen.jpeg" alt=""></div>
