flip card updates

--- a/public/BentoDesign.html
+++ b/public/BentoDesign.html
@@ -25,13 +25,13 @@
             <div class="col-left">
                 <div class="row row1">
                     <div class="card">
-                           <div class="card-face front">
+                        <div class="card-face front">
                             <img src="images/aquarium.jpeg">
-                           </div>
-                           <div class="card-face back">
+                        </div>
+                        <div class="card-face back">
                             <h4>This is the event name.</h4>
                             <p>This is the event description</p>
-                           </div> 
+                        </div> 
                     </div>
                 </div>
                 <div class="row row2">
@@ -43,15 +43,45 @@
                             <h4>This is the event name.</h4>
                             <p>This is the event description</p>
                         </div> 
-                 </div>
+                    </div>
                 </div>
                 <div class="row row3">
-                    <div class="row-col left"><img src="images/candy_cane.jpeg" alt=""></div>
-                    <div class="row-col right"><img src="images/john_berry.jpeg" alt=""></div>
+                    <div class="row-col left">
+                        <div class="card">
+                            <div class="card-face front">
+                                <img src="images/candy_cane.jpeg" alt="">
+                            </div>
+                            <div class="card-face back">
+                                <h4>This is the event name.</h4>
+                                <p>This is the event description</p>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="row-col right">
+                        <div class="card">
+                            <div class="card-face front">
+                                <img src="images/john_berry.jpeg" alt="">
+                            </div>
+                            <div class="card-face back">
+                                <h4>This is the event name.</h4>
+                                <p>This is the event description</p>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-right">
-                <div class="row top"> <img src="images/karaoke.jpeg" alt=""></div>
+                <div class="row top">
+                    <div class="card">
+                        <div class="card-face front">
+                            <img src="images/karaoke.jpeg" alt="">
+                        </div>
+                        <div class="card-face back">
+                            <h4>This is the event name.</h4>
+                            <p>This is the event description</p>
+                        </div> 
+                    </div>
+                </div>
                 <div class="row bottom"><img src="images/open_mic.jpeg" alt=""></div>
             </div>
         </div>
@@ -59,17 +89,68 @@
     <div class="bento_wrapper">
         <div class="bentoContainer">
             <div class="col-left">
-                <div class="row row1"><img src="images/oreo.jpeg" alt="">
+                <div class="row row1">
+                    <div class="card">
+                        <div class="card-face front">
+                            <img src="images/oreo.jpeg" alt="">
+                        </div>
+                        <div class="card-face back">
+                            <h4>This is the event name.</h4>
+                            <p>This is the event description</p>
+                        </div> 
+                    </div>
                 </div>
-                <div class="row row2"><img src="images/shocktoberfest.jpeg" alt=""></div>
+                <div class="row row2">
+                    <div class="card">
+                        <div class="card-face front">
+                            <img src="images/shocktoberfest.jpeg" alt="">
+                        </div>
+                        <div class="card-face back">
+                            <h4>This is the event name.</h4>
+                            <p>This is the event description</p>
+                        </div> 
+                    </div>
+                </div>
                 <div class="row row3">
-                    <div class="row-col left"><img src="images/soup_kitchen.jpeg" alt=""></div>
-                    <div class="row-col right"><img src="images/trivia.jpeg" alt=""></div>
+                    <div class="row-col left">
+                        <div class="card">
+                            <div class="card-face front">
+                                <img src="images/soup_kitchen.jpeg" alt="">
+                            </div>
+                            <div class="card-face back">
+                                <h4>This is the event name.</h4>
+                                <p>This is the event description</p>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="row-col right">
+                        <div class="card">
+                            <div class="card-face front">
+                                <img src="images/trivia.jpeg" alt="">
+                            </div>
+                            <div class="card-face back">
+                                <h4>This is the event name.</h4>
+                                <p>This is the event description</p>
+                            </div> 
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-right">
-                <div class="row top"><img src="images/shocktoberfest.jpeg" alt=""></div>
-                <div class="row bottom"><img src="images/soup_kitchen.jpeg" alt=""></div>
+                <div class="row top">
+                    <div class="card">
+                        <div class="card-face front">
+                            <img src="images/shocktoberfest.jpeg" alt="">
+                        </div>
+                        <div class="card-face back">
+                            <h4>This is the event name.</h4>
+                            <p>This is the event description</p>
+                        </div> 
+                    </div>
+                </div>
+                <div class="row bottom">
+                    <img src="images/soup_kitchen.jpeg" alt="">
+                </div>
             </div>
         </div>
     </div>
